--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "co": "^4.6.0",
     "compression": "^1.6.0",
     "cookie-parser": "^1.4.0",
+    "cors": "^2.8.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
